# cve.icu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CVE2016.html  CVE2016.ipynb  CVE2017.html  CVE2017.ipynb  CVE2018.html  CVE2018.ipynb  CVE2019.html  CVE2019.ipynb  CVE2020.html  CVE2020.ipynb  CVE2021.html  CVE2021.ipynb  CVE2022.html  CVE2022.ipynb  CVE2023.html  CVE2023.ipynb  CVE2024.html  CVE2024.ipynb  CVE2025.html  CVE2025.ipynb  CVEAll.html  CVEAll.ipynb  CVECNA.html  CVECNA.ipynb  CVECPE.html  CVECPE.ipynb  CVECVSS.html  CVECVSS.ipynb  CVECWE.html  CVECWE.ipynb  CVECalendar.html  CVECalendar.ipynb  CVEGrowth.html  CVEGrowth.ipynb  LICENSE  Makefile  README.md  (+27 more)
.github/workflows/: ci.yml  deploy.yml
_sources/: CVE2016.ipynb  CVE2019.ipynb  CVE2024.ipynb  CVECNA.ipynb  CVECPE.ipynb  CVECWE.ipynb  CVEGrowth.ipynb
code-refactoring-2026-01-08/: README.md  finding-001-type-hints.md  finding-002-union-types.md  finding-003-dataclasses.md  finding-004-pathlib.md  finding-005-exceptions.md
data/: README.md  async_downloader.py  authoritative_cna_list.json  authoritative_email_mappings.json  calendar_analysis.json  calendar_analysis.py  calendar_analysis_current_year.json  cna_analysis.json  cna_analysis.py  cna_analysis_current_year.json  cna_mapping_restart.py  comprehensive_contact_mappings.json  contact_domain_mappings.json  contact_email_mappings.json  cpe_analysis.json  cpe_analysis.py  cpe_analysis_current_year.json  cve_1999.json  cve_2000.json  cve_2001.json  cve_2002.json  cve_2003.json  cve_2004.json  cve_2005.json  cve_2006.json  cve_2007.json  cve_2008.json  cve_2009.json  cve_2010.json  cve_2011.json  cve_2012.json  cve_2013.json  cve_2014.json  cve_2015.json  cve_2016.json  cve_2017.json  cve_2018.json  cve_2019.json  cve_2020.json  cve_2021.json  (+34 more)
data/cache/: cache_info.json  cna_list.json  cna_name_map.json  known_exploited_vulnerabilities_parsed.json
data/scripts/: cna_mapping_restart.py  generate_cna_analysis.py  quick_build.py  rebuild_cna.py  rebuild_cpe.py  rebuild_cvss.py  rebuild_cwe.py  rebuild_data_quality.py  rebuild_growth.py  rebuild_templates.py  unmatched_cnas_analysis.json  unofficial_cna_analysis.json  utils.py
docs/: ARCHITECTURE.md  COUNTING.md  ROADMAP.md  SCHEMAS.md
static/css/: style.css
templates/: about.html  base.html  calendar.html  cna-hub.html  cna.html  cpe.html  cvss.html  cwe.html  cwe_broken_backup.html  cwe_simple.html  data-quality.html  design-system.md  epss.html  growth.html  index.html  kev.html  scoring.html  years.html
tests/: __init__.py  conftest.py  fakes.py  test_async_downloader.py  test_build.py  test_data_quality.py  test_integration.py  test_protocols.py  test_schemas.py
v1/: CVE2017.ipynb  CVE2019.ipynb  CVE2021.ipynb  CVE2023.ipynb  CVE2024.ipynb  CVEAll.ipynb  CVECNA.ipynb  CVECPE.ipynb  CVECWE.ipynb  CVECalendar.ipynb  CVEGrowth.ipynb
web/: _headers  about.html  calendar.html  cna-hub.html  cna.html  cpe.html  cvss.html  cwe.html  data-quality.html  epss.html  growth.html  index.html  kev.html  scoring.html  years.html
web/data/: calendar_analysis.json  calendar_analysis_current_year.json  cna_analysis.json  cna_analysis_current_year.json  cpe_analysis.json  cpe_analysis_current_year.json  cve_1999.json  cve_2000.json  cve_2001.json  cve_2002.json  cve_2003.json  cve_2004.json  cve_2005.json  cve_2006.json  cve_2007.json  cve_2008.json  cve_2009.json  cve_2010.json  cve_2011.json  cve_2012.json  cve_2013.json  cve_2014.json  cve_2015.json  cve_2016.json  cve_2017.json  cve_2018.json  cve_2019.json  cve_2020.json  cve_2021.json  cve_2022.json  cve_2023.json  cve_2024.json  cve_2025.json  cve_2026.json  cve_all.json  cvss_analysis.json  cvss_analysis_current_year.json  cwe_analysis.json  cwe_analysis_current_year.json  data_quality.json  (+7 more)
web/static/css/: style.css
